# Project_Sage

./: .env.example  .gitignore  .pre-commit-config.yaml  BUILD_LOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SAGE_SPEC.md  SAGE_UI_Review_Report.docx  SCHEMAS.md  bench_hard_mkp.py  pyproject.toml  reinstall.sh  restart-sage.sh  ruff.toml  server.json
.build/: AGENT.md  BACK_TO_WORK_SPEC.md  BUILD_LOG.md  CLAUDE.md  CLEANUP_PROMPT.md  Claude-AI_Claude-Code-ClickUp-Sage.md  HANDOFF.md  RESUME_PROMPT.md  SAGE_SPEC.md  UI_IMPROVEMENTS_PROMPT.md
.github/workflows/: publish-mcp-registry.yml
examples/: blending_problem.csv  blending_problem.xlsx  nurse_scheduling.xlsx  portfolio_5_assets.xlsx  portfolio_template.xlsx  scheduling_template.xlsx  transport_routing.xlsx
groot/: __init__.py  __main__.py  app_interface.py  app_routes.py  artifact_store.py  auth.py  config.py  mcp_transport.py  models.py  tools.py
groot-apps/sage/: __init__.py
groot_apps/_example/: loader.py  models.py  tools.py
mcpb/: manifest.json  pyproject.toml  sage-solver-mcp-0.1.2.mcpb
mcpb/src/: server.py
sage-cloud/: README.md  pyproject.toml
sage-cloud/sage_cloud/: __init__.py
sage-core/: README.md  pyproject.toml
sage-core/sage_core/: __init__.py  builder.py  explainer.py  fileio.py  models.py  relaxation.py  solver.py
sage-core/tests/: test_builder.py  test_explainer.py  test_fileio.py  test_full_pipeline.py  test_models.py  test_phase_integration.py  test_relaxation.py  test_solver.py
sage-mcp/: claude_desktop_config.json  pyproject.toml
sage-mcp/sage_mcp/: __main__.py  server.py
sage-mcp/tests/: test_examples.py  test_server.py
sage-solver-cloud/: .env.example  .gitignore  API.md  CLAUDE.md  GROOT_SPEC_V0.1.md  README.md  ReadMe_To_Fork_And_Integrate.md  SAGE_CLOUD_SPEC.md  conftest.py  groot_architecture.jsx  mcp_config.example.json  pyproject.toml
sage-solver-cloud/.build/: AGENT.md  BUILD_LOG.md  Claude-AI_Claude-Code-ClickUp-Groot.md  Claude-AI_Claude-Code-ClickUp-SageCloud.md  SPEC.md
sage-solver-cloud/docs/: APP_MODULE_GUIDE.md
sage-solver-cloud/groot/: builtin_pages.py  page_server.py  server.py
sage-solver-cloud/groot-shell/: index.html
sage-solver-cloud/groot_apps/_example/: __init__.py
sage-solver-cloud/groot_apps/_example/pages/: hello.jsx
sage-solver-cloud/sage_cloud/: __init__.py  __main__.py  app_interface.py  app_routes.py  artifact_store.py  auth.py  builtin_pages.py  config.py  discovery.py  jobs_api.py  mcp_transport.py  models.py  page_server.py  runner.py  schemas.py  server.py  tools.py
sage-solver-cloud/sage_cloud/sage_shell/: index.html
sage-solver-cloud/sage_solver_cloud/: __init__.py
sage-solver-cloud/tests/: conftest.py  test_app_interface.py  test_app_store.py  test_app_tools.py  test_artifact_store.py  test_auth.py  test_delete_app.py  test_discovery.py  test_export_app.py  test_g3_integration.py  test_import_app.py  test_jobs_api.py  test_jobs_ui.py  test_mcp_sse.py  test_mcp_transport.py  test_models.py  test_page_server.py  test_runner.py  test_schemas.py  test_server.py  test_shell_integration.py  test_tools.py
sage-solver-core/: pyproject.toml
sage-solver-core/sage_solver_core/: __init__.py  builder.py  classifier.py  explainer.py  fileio.py  models.py  relaxation.py  solver.py
sage-solver-core/tests/: test_assumed_constraints.py  test_builder.py  test_callbacks.py  test_classifier.py  test_explainer.py  test_fileio.py  test_full_pipeline.py  test_models.py  test_phase_integration.py  test_relaxation.py  test_solver.py  test_stage_integration.py  test_string_deserialization.py
sage-solver-mcp/: README.md  claude_desktop_config.json  pyproject.toml
sage-solver-mcp/sage_solver_mcp/: __init__.py  __main__.py  cloud.py  cloud_process.py  fallback.py  local_io.py  server.py
sage-solver-mcp/tests/: test_cloud_discovery.py  test_cloud_integration.py  test_examples.py  test_fallback.py  test_server.py
tests/: conftest.py  test_app_bundles.py  test_app_interface.py  test_app_page_routes.py  test_app_store.py  test_app_tools.py  test_artifact_store.py  test_delete_app.py  test_g3_integration.py  test_models.py  test_tools.py
