[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sage-cloud"
version = "0.1.0"
description = "SAGE cloud API — FastAPI wrapper for remote MCP access (V2, not yet implemented)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Pragnakar Pedapenki", email = "pragnakar@gmail.com" }]
requires-python = ">=3.11"
keywords = ["mcp", "optimization", "fastapi", "cloud", "operations-research"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart",
    "sage-core>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sage_cloud"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
