[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-solver-cloud"
version = "0.3.0"
description = "Domain-agnostic LLM runtime environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "aiosqlite>=0.20",
    "mcp[cli]>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
sage-cloud = "sage_cloud.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sage_cloud*", "sage_cloud_apps*"]

[tool.setuptools.package-data]
sage_cloud = ["sage_shell/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
