[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sage-solver-core"
version = "0.1.3"
description = "SAGE core engine — solver wrappers, model building, file I/O, and result explanation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Pragnakar Pedapenki", email = "pragnakar@gmail.com" }]
requires-python = ">=3.11"
keywords = ["optimization", "linear-programming", "mip", "highs", "operations-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "highspy>=1.7.0",
    "ortools>=9.9",
    "pandas>=2.1",
    "openpyxl>=3.1",
    "pydantic>=2.5",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/pragnakar/sage"
Repository = "https://github.com/pragnakar/sage"
"Bug Tracker" = "https://github.com/pragnakar/sage/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.7",
    "ruff>=0.1",
    "pre-commit>=3.5",
    "pandas-stubs>=2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["sage_solver_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
